// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityCard component should render policy description as expected 1`] = `
<React.Fragment>
  Theses Assessors
   (
  2
  )
</React.Fragment>
`;

exports[`SecurityCard component should render policy description as expected 2`] = `
<React.Fragment>
  test2Name
   (
  test2ID
  )
</React.Fragment>
`;

exports[`SecurityCard component should render policy items as expected 1`] = `
Array [
  <WithStyles(MenuItem)
    value={1}
  >
    Administrators
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={2}
  >
    Theses Assessors
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={3}
  >
    Evidence Assessors
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={4}
  >
    Staff and Students
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={5}
  >
    Public
  </WithStyles(MenuItem)>,
]
`;

exports[`SecurityCard component should render policy items as expected 2`] = `
Array [
  <WithStyles(MenuItem)
    value={1}
  >
    test1Label
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={2}
  >
    test2Label
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={3}
  >
    test3Label
  </WithStyles(MenuItem)>,
]
`;

exports[`SecurityCard component should render properly 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`SecurityCard component should render properly 2`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;
